[package]
name = "r2me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4.22", default-features = false, optional = true}
simple-logging = {version = "2.0.2", optional = true}

[dependencies.minifb]
git = "https://github.com/emoon/rust_minifb.git"
rev = "d62b0f5"
default-features = false
features = ["x11"]
optional = true

[features]
default = [
    "log",
    "std",
    "dep:minifb"
]
std = []
log = [
    "dep:simple-logging",
    "dep:log"
]